@@ -1,6 +1,7 @@
 2018-06-08 Philipp Klaus Krause <pkk AT spth.de>
 
-	* src/stm8/ralloc.c:
+	* src/stm8/ralloc.c,
+	  src/SDCCopt.c:
 	  Narrow reads from pointers, RFE #559.
 
 2018-06-06 Ben Shi <powerstudio1st AT 163 DOT com>
